--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.4.7",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
     "node-fetch": "^3.3.2",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "eslint": "^9.15.0",
